Fixes aot issues in login and signup; refactors form error detection

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,14 +21,14 @@
 
             <mat-form-field>
               <input formControlName="email" matInput placeholder="Enter your email" id="email" type="text">
-              <mat-error *ngIf="email.errors && email.touched && email.invalid">Email is invalid</mat-error>
+              <mat-error *ngIf="!!email && !!email.errors && email.touched && email.invalid">Email is invalid</mat-error>
             </mat-form-field>
             <mat-form-field>
               <input formControlName="password" matInput placeholder="Enter your password" id="password" [type]="hide ? 'password' : 'text'">
               <mat-icon class="nav-item" matSuffix (click)="hide = !hide">{{ hide ? 'visibility' : 'visibility_off' }}
               </mat-icon>
-              <mat-error *ngIf="password.errors && password.touched && password.errors.cannotContainSpace">{{ "Password must not contains spaces" }}</mat-error>
-              <mat-error *ngIf="password.errors && password.touched && password.errors.minlength">
+              <mat-error *ngIf="!!password && !!password.errors && password.touched && password.errors.cannotContainSpace">{{ "Password must not contains spaces" }}</mat-error>
+              <mat-error *ngIf="!!password && !!password.errors && password.touched && password.errors.minlength">
                 User Name must be a minimum of {{ password.errors.minlength.requiredLength }} characters
               </mat-error>
             </mat-form-field>
