--- a/src/app/admin/admin-products/admin-products.component.scss
+++ b/src/app/admin/admin-products/admin-products.component.scss
@@ -44,14 +44,14 @@
   max-width: 40px;
 }
 
-// .mat-header-row {
-//   margin-bottom: 0px;
-// }
-// .thumbnail {
-//   background-size: cover;
-//   border-radius: 100%;
-//   height: 40px;
-//   margin-bottom: 0;
-//   margin-top: 1px;
-//   max-width: 40px;
-// }
+$chat-button-margin: 0 1px;
+.reset-button {
+  margin: $chat-button-margin;
+}
+
+.button-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 40px;
+}
