--- a/src/app/shared/components/product-card/product-card.component.scss
+++ b/src/app/shared/components/product-card/product-card.component.scss
@@ -1,4 +1,5 @@
 $image-margin: -75px 0 0 -100px;
+$card-height: 450px;
 
 .card-footer {
   padding: 0;
@@ -14,6 +15,6 @@ $image-margin: -75px 0 0 -100px;
 
 .crop {
   width: 395px;
-  height: 450px;
+  height: $card-height;
   overflow: hidden;
 }
