Updates footer and home page

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,9 +1,11 @@
 <div class="jumbotron home-section">
   <div class="container">
-    <h1 class="display-3">Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and
-      three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p>Please check the example <a class="text-dark" routerLink="/products">products</a> page</p>
+    <h1 class="display-2">Chat Demo App</h1>
+    <h2 class="display-3">Welcome!</h2>
+    <p>This is uses a template for a simple marketing or informational website. It includes a large callout called a jumbotron
+      and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+    <p>Please check the example
+      <a class="text-primary" routerLink="/products">products</a> page</p>
     <p>
       <a class="btn btn-primary btn-lg" routerLink="/products" role="button">Products &raquo;</a>
     </p>
