--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="jumbotron home-section">
   <div class="container">
     <h1 class="display-2">Chat Demo App</h1>
-    <h2 class="display-3">Welcome!</h2>
+    <!-- <h2 class="display-3">Welcome!</h2> -->
+    <p>Interact with Chat by clicking on the button in the lower right corner</p>
     <p>This is uses a template for a simple marketing or informational website. It includes a large callout called a jumbotron
       and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
     <p>Please check the example
@@ -15,7 +16,7 @@
     <div class="col-md-4">
       <h2>Heading</h2>
       <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-        nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+        nibh, ut fermentum massa justo sit amet risus.
       </p>
       <p>
         <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
@@ -24,7 +25,7 @@
     <div class="col-md-4">
       <h2>Heading</h2>
       <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-        nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+        nibh, ut fermentum massa justo sit amet risus.
       </p>
       <p>
         <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
@@ -32,9 +33,7 @@
     </div>
     <div class="col-md-4">
       <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod
-        semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
-        risus.
+      <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
       </p>
       <p>
         <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
