Adds avatar url to signup form

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,7 +4,8 @@
     <div class="col-md-4">
       <!-- <div class="column medium-6 medium-centered large-4 large-centered"> -->
       <mat-error *ngIf="form.errors">Invalid signup</mat-error>
-      <form [formGroup]="form" class="form-horizontal" (ngSubmit)="submitSignUp()" novalidate="">
+      <form [formGroup]="form" class="form-horizontal" (ngSubmit)="submitSignUp()"
+        novalidate="">
         <fieldset>
           <div id="legend">
             <legend class="text-center">Email Sign Up</legend>
@@ -13,31 +14,48 @@
           <div class="example-container">
 
             <mat-form-field>
-              <input formControlName="userName" matInput placeholder="Enter your username" id="userName" type="text">
-              <mat-hint *ngIf="!!userName && userName.pending">Checking for uniqueness...</mat-hint>
-              <mat-error *ngIf="formControlError(userName, 'shouldBeUniqueUserName')">{{ "User Name is already in use" }}</mat-error>
-              <mat-error *ngIf="formControlError(userName, 'cannotContainSpace')">{{ "User Name must not contain spaces" }}</mat-error>
-              <mat-error *ngIf="formControlError(userName, 'required')">{{ "User Name is required" }}</mat-error>
+              <input formControlName="userName" matInput placeholder="Enter your username"
+                id="userName" type="text">
+              <mat-hint *ngIf="!!userName && userName.pending">Checking for
+                uniqueness...</mat-hint>
+              <mat-error *ngIf="formControlError(userName, 'shouldBeUniqueUserName')">{{
+                "User Name is already in use" }}</mat-error>
+              <mat-error *ngIf="formControlError(userName, 'cannotContainSpace')">{{
+                "User Name must not contain spaces" }}</mat-error>
+              <mat-error *ngIf="formControlError(userName, 'required')">{{
+                "User Name is required" }}</mat-error>
               <mat-error *ngIf="formControlError(userName, 'minlength')">
-                User Name must be a minimum of {{ userName.errors.minlength.requiredLength }} characters
+                User Name must be a minimum of {{
+                userName.errors.minlength.requiredLength }} characters
               </mat-error>
             </mat-form-field>
             <mat-form-field>
-              <input formControlName="email" matInput placeholder="Enter your email" id="email" type="text">
+              <input formControlName="email" matInput placeholder="Enter your email"
+                id="email" type="text">
               <mat-error *ngIf="formControlInvalid(email)">Email is invalid</mat-error>
             </mat-form-field>
             <mat-form-field>
-              <input formControlName="password" matInput placeholder="Enter your password" id="password" [type]="hide ? 'password' : 'text'">
-              <mat-icon class="nav-item" matSuffix (click)="hide = !hide">{{ hide ? 'visibility' : 'visibility_off' }}
+              <input formControlName="password" matInput placeholder="Enter your password"
+                id="password" [type]="hide ? 'password' : 'text'">
+              <mat-icon class="nav-item" matSuffix (click)="hide = !hide">{{
+                hide ? 'visibility' : 'visibility_off' }}
               </mat-icon>
-              <mat-error *ngIf="formControlError(password, 'cannotContainSpace')">{{ "Password must not contains spaces" }}</mat-error>
+              <mat-error *ngIf="formControlError(password, 'cannotContainSpace')">{{
+                "Password must not contains spaces" }}</mat-error>
               <mat-error *ngIf="formControlError(password, 'minlength')">
-                Password must be a minimum of {{ password.errors.minlength.requiredLength }} characters
+                Password must be a minimum of {{
+                password.errors.minlength.requiredLength }} characters
               </mat-error>
             </mat-form-field>
             <mat-form-field>
-              <input formControlName="confirmPassword" matInput placeholder="Confirm your password" id="confirmPassword" [type]="hide ? 'password' : 'text'">
-              <mat-error *ngIf="formControlError(confirmPassword, 'matchPassword')">{{ "Passwords must match" }}</mat-error>
+              <input formControlName="confirmPassword" matInput placeholder="Confirm your password"
+                id="confirmPassword" [type]="hide ? 'password' : 'text'">
+              <mat-error *ngIf="formControlError(confirmPassword, 'matchPassword')">{{
+                "Passwords must match" }}</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+              <input formControlName="avatarUrl" matInput placeholder="Enter your avatar url"
+                id="avatarUrl" [type]="text">
             </mat-form-field>
 
           </div>
@@ -49,7 +67,8 @@
             </div>
           </div>
           <p class="text-center expanded">
-            <a [routerLink]="['/login']" routerLinkActive="active">Already signed up?</a>
+            <a [routerLink]="['/login']" routerLinkActive="active">Already
+              signed up?</a>
           </p>
         </fieldset>
       </form>
