Updates to 7.0, new jasmine test, and version 2.2.6

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -55,7 +55,7 @@
             </mat-form-field>
             <mat-form-field>
               <input formControlName="avatarUrl" matInput placeholder="Enter your avatar url"
-                id="avatarUrl" [type]="text">
+                id="avatarUrl" type="text">
             </mat-form-field>
 
           </div>
