Cleans up home page

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -3,44 +3,15 @@
     <h1 class="display-2">Chat Demo App</h1>
     <!-- <h2 class="display-3">Welcome!</h2> -->
     <p>Interact with Chat by clicking on the button in the lower right corner</p>
-    <p>This is uses a template for a simple marketing or informational website. It includes a large callout called a jumbotron
-      and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p>Please check the example
-      <a class="text-primary" routerLink="/products">products</a> page</p>
+    <p>This app is a rudimentary marketing and service supplier.</p>
+    <p>
+      Please check the example
+      <a class="text-primary font-weight-bold" routerLink="/products">products</a> page
+    </p>
     <p>
       <a class="btn btn-primary btn-lg" routerLink="/products" role="button">Products &raquo;</a>
     </p>
   </div>
 
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-        nibh, ut fermentum massa justo sit amet risus.
-      </p>
-      <p>
-        <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-        nibh, ut fermentum massa justo sit amet risus.
-      </p>
-      <p>
-        <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      </p>
-      <p>
-        <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-  </div>
-
-  <hr>
-
+  <hr />
 </div>
