Uses my password validator class

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -3,7 +3,7 @@
     <h1 class="display-2">Chat Demo App</h1>
     <!-- <h2 class="display-3">Welcome!</h2> -->
     <p>Interact with Chat by clicking on the button in the lower right corner</p>
-    <p>This app is a rudimentary marketing and service supplier.</p>
+    <p>This app is a rudimentary marketing or service supplier web site.</p>
     <p>
       Please check the example
       <a class="text-primary font-weight-bold" routerLink="/products">products</a> page
